# smash-soda

./: .gitattributes  .gitignore  API Usage License.md  CMakeLists.txt  LICENSE  README.md  SmashSoda.sln  imgui.ini  installer-preview.bat  installer.bat  launch.json  updater.bat
Dependencies/nvenc_shim/: README.txt
Dependencies/parsecsdk/: parsec_shim.cpp  parsec_shim.h
Dependencies/parsecsdk/golang/: go.mod  main.go
Dependencies/parsecsdk/golang/parsec/: parsec.go  parsec_api.h  (+2 more)
Dependencies/sdl/include/: SDL_hints.h
ParsecSoda/: Hosting.cpp  Hosting.h  ParsecSoda.vcxproj
ParsecSoda/Core/: Config.cpp  Config.h
ParsecSoda/Widgets/: SettingsWidget.cpp  SettingsWidget.h
SmashSoda/: AGamepad.cpp  AGamepad.h  AudioIn.cpp  AudioIn.h  AudioMix.cpp  AudioMix.h  AudioOut.cpp  AudioOut.h  AudioSource.cpp  AudioSource.h  AudioTools.h  ButtonLock.h  CMakeLists.txt  ChatLog.cpp  ChatLog.h  CompilerDirectives.h  DX11.cpp  DX11.h  DualshockGamepad.cpp  DualshockGamepad.h  Fix Encoding.ps1  Frequency.cpp  Frequency.h  GameData.cpp  GameData.h  GamepadState.cpp  GamepadState.h  Guest.cpp  Guest.h  GuestDataList.cpp  GuestDataList.h  GuestDevice.cpp  GuestDevice.h  GuestTier.h  Hosting.cpp  Hosting.h  IGamepadReader.h  KeyboardMaps.h  KeyboardMapsUtil.cpp  KeyboardMapsUtil.h  (+24 more)
SmashSoda/chatbot/: ACommand.h  ChatBot.cpp  ChatBot.h  ChatBotCustom.cpp  ChatBotCustom.h
SmashSoda/chatbot/commands/: CommandBotMessage.h  CommandDefaultMessage.h  CommandTemplate.h
SmashSoda/chatbot/commands/god/: CommandAddPS.h  CommandAddXbox.h  CommandMod.h  CommandPrivate.h  CommandPublic.h  CommandQuit.h  CommandSpeakers.h  CommandUnVIP.h  CommandUnmod.h  CommandVIP.h  CommandVersion.h
SmashSoda/chatbot/commands/guest/: Command8Ball.h  CommandBB.h  CommandBonk.cpp  CommandBonk.h  CommandDiscord.h  CommandFF.h  CommandFortune.h  CommandHelp.h  CommandKeyboard.h  CommandMirror.h  CommandPads.h  CommandPing.h  CommandRPG.h  CommandRollCall.h  CommandSFX.h  CommandSpectate.h  CommandStopSFX.h  CommandSwap.h  CommandTriangle.h
SmashSoda/chatbot/commands/mod/: CommandBan.h  CommandCooldown.h  CommandDC.h  CommandDCAll.h  CommandDecrease.h  CommandExtend.h  CommandHotseat.h  CommandKick.h  CommandLock.h  CommandLockAll.h  CommandMute.h  CommandName.h  CommandOne.h  CommandRC.h  CommandRestart.h  CommandStrip.h  CommandStripAll.h  CommandUnban.h  CommandUnbanLastIP.h  CommandUnmute.h  CommandVerify.h  CommandVideoFix.h  CommandWarmup.h
SmashSoda/core/: Cache.cpp  Cache.h  Config.cpp  Config.h  GamepadClient.cpp  GamepadClient.h  GuestList.cpp  GuestList.h  MasterOfPuppets.cpp  MasterOfPuppets.h
SmashSoda/globals/: AppColors.cpp  AppColors.h  AppFonts.cpp  AppFonts.h  AppIcons.cpp  AppIcons.h  AppStyle.cpp  AppStyle.h
SmashSoda/helpers/: Bitwise.cpp  Bitwise.h  Clock.cpp  Clock.h  Countries.h  Debouncer.cpp  Debouncer.h  Dice.cpp  Dice.h  Keymap.h  PathHelper.cpp  PathHelper.h  Stopwatch.cpp  Stopwatch.h  StopwatchTimer.cpp  StopwatchTimer.h  Stringer.cpp  Stringer.h  TimeT.h  Timespan.cpp  Timespan.h  Utils.cpp  Utils.h  WStringConvert.cpp  WStringConvert.h
SmashSoda/imgui/: imconfig.h  imform.h  imgui.cpp  imgui.h  imgui_colors.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_markdown.h  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot.h  implot_demo.cpp  implot_internal.h  implot_items.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
SmashSoda/lists/: BanList.cpp  BanList.h  GameDataList.cpp  GameDataList.h  ModList.cpp  ModList.h  SFXList.cpp  SFXList.h  TierList.cpp  TierList.h  VIPList.cpp  VIPList.h  VerifiedList.cpp  VerifiedList.h
SmashSoda/models/: CommandInfo.h  GuestData.cpp  GuestData.h  SessionCache.h  Theme.cpp  Theme.h
SmashSoda/services/: Arcade.cpp  Arcade.h  AutoMod.cpp  AutoMod.h  GuestStateStore.cpp  GuestStateStore.h  Hotseat.cpp  Hotseat.h  InputControlService.cpp  InputControlService.h  Macro.cpp  Macro.h  OverlayService.cpp  OverlayService.h  ProcessMan.cpp  ProcessMan.h  ScreenshotService.cpp  ScreenshotService.h  StreamHandler.cpp  StreamHandler.h  ThemeController.cpp  ThemeController.h  WebSocket.cpp  WebSocket.h
SmashSoda/sfx/: _sfx-sample.json
SmashSoda/structs/: IPRangeStruct.h  Tab.h
SmashSoda/themes/: AquaTheme.h  BubblegumTheme.h  EmberTheme.h  EmeraldTheme.h  GoldenTheme.h  IndigoTheme.h  WildfireTheme.h
SmashSoda/widgets/: AlertWidget.cpp  AlertWidget.h  AnimatedGamepadWidget.cpp  AnimatedGamepadWidget.h  AudioControlWidget.cpp  AudioControlWidget.h  AudioSettingsWidget.cpp  AudioSettingsWidget.h  BackgroundWidget.cpp  BackgroundWidget.h  BoolButtonWidget.cpp  BoolButtonWidget.h  ButtonLockWidget.cpp  ButtonLockWidget.h  ChatWidget.cpp  ChatWidget.h  ConfirmPopupWidget.cpp  ConfirmPopupWidget.h  DeveloperWidget.cpp  DeveloperWidget.h  GamepadsWidget.cpp  GamepadsWidget.h  GuestListWidget.cpp  GuestListWidget.h  HostInfoWidget.cpp  HostInfoWidget.h  HostSettingsWidget.cpp  HostSettingsWidget.h  HotseatWidget.cpp  HotseatWidget.h  IconButton.cpp  IconButton.h  InfoWidget.cpp  InfoWidget.h  IntRangeWidget.cpp  IntRangeWidget.h  KeyboardMapWidget.cpp  KeyboardMapWidget.h  LibraryWidget.cpp  LibraryWidget.h  (+38 more)
dependencies/parsecsdk/golang/: delete_file.go
dependencies/parsecsdk/typescript/: package.json
docs/: mkdocs.yml
docs/content/: index.md
docs/content/getting-started/: development.md  install.md  manual-build.md  migration.md  overview.md
docs/site/: 404.html  index.html
docs/site/css/: fixes.css
docs/site/features/: ChatCommands.html  SFX.html
docs/site/getting-started/: development.html  install.html  manual-build.html  migration.html  overview.html  quickstart.html
docs/site/overlay/: Overview.html
docs/site/search/: search_index.js  search_index.json
docs/site/studio/: Overview.html
docs/site/widgets/: Audio.html  ButtonLock.html  Chat.html  Gamepads.html  Guests.html  Hosting.html  Hotseat.html  KeyboardMapper.html  Library.html  Log.html  Puppeteer.html  Settings.html  Video.html
tools/: ThemeCreator.html
(+7 files in other folders)
